# gazebo_table_tennis

./: CMakeLists.txt  README.md  package.xml
launch/: ball_description.launch.py  racket_description.launch.py  sim_tt.launch.py  table_description.launch.py
models/: ball.stl  table_tennis.blend  tt_ball.blend
models/tt_ball/: model.config  model.sdf
models/tt_ball/meshes/: ball.stl
models/tt_racket/: model.config  model.sdf
models/tt_racket/meshes/: racket.stl
models/tt_table/: model.config  model.sdf
models/tt_table/meshes/: ttt.stl
urdf/: ball.urdf.xacro  racket.urdf.xacro  table.urdf.xacro
