<?xml version="1.0"?>
<package format="2">
  <name>gazebo_table_tennis</name>
  <version>0.0.1</version>
  <description>The gazebo_table_tennis package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
