<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_table_tennis</name>
  <version>0.0.1</version>
  <description>The gazebo_table_tennis package</description>
  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>tiago_robot</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
